syntax = "proto3";

package io.restorecommerce.role;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

service Service {
  option (io.restorecommerce.options.service_name) = "role";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (RoleListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (RoleList) returns (RoleListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (RoleList) returns (RoleListResponse);
  rpc Upsert (RoleList) returns (RoleListResponse);
}

message Role {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string name = 3; // specifies the role of the user
  string description = 4;
  repeated string assignable_by_roles = 5; // role id who can assign this role
}

message RoleList {
  repeated Role items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message RoleListResponse {
  repeated RoleResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message RoleResponse {
  Role payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Deleted {
  string id = 1;
}
